--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
 <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
-asdasd
+
+<header id="header">
+	<div class="wrap clear">
+		<h1 class="logo"><a href="https://zhyem.github.io/">LOGO</a></h1>
+		<nav>
+			<ul class="clear">
+				<li><a href="">About</a></li>
+				<li><a href="">PortFolio</a></li>
+				<li><a href="">Skill</a></li>
+			</ul>
+		</nav>
+	</div>
+</header>
+
+<div id="body">
+	<div class="wrap">
+		body
+	</div>
+</div>
+
+<footer id="footer">
+	<div class="wrap">
+		유진이 사랑해
+	</div>
+</footer>
+
 </body>
 </html>
