--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="imagetoolbar" content="no">
 <meta http-equiv="X-UA-Compatible" content="IE=10,chrome=1">
-<title>김중현_포트폴리오</title>
+<title>김중현_트폴리오</title>
 <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
