--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ko" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>김중현_포트폴리오</title>
+    <title>J.HYEON</title>
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="stylesheet" href="./css/content.css" />
     <link rel="stylesheet" href="./plugin/jquery.fullpage.css" />
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="./js/scrolloverflow.js"></script>
     <script type="text/javascript" src="./plugin/jquery.fullpage.js"></script>
     <script type="text/javascript" src="./js/index.js"></script>
